# UniBot-RA-Project

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_source_registry_crawl_status.py  0003_add_canonical_record_freshness_fields.py  0004_source_registry_runtime_fields_and_generation_constraints.py  0005_pipeline_reliability_hardening.py  0006_add_last_successful_crawl_at.py  0007_add_verification_event_resolved_at.py  0008_add_missing_fk_indexes.py  0009_add_document_landing_record_type.py  0010_add_contextual_chunk_cache.py  0011_add_program_curriculum_record_type.py
data/: sources.json
frontend/: index.html  script.js  style.css
partner_kit/: README.md  __init__.py
partner_kit/contracts/: __init__.py  enums.py  records.py
scripts/: audit_index_rendering.py  build_serving_generation.py  check_neon_connection.py  ingest_records.py  reset_serving_state.py  run_index_jobs.py  verify_serving_generation.py
src/: main.py
src/unibot/: __init__.py  commands.py  http_clients.py  logging.py  settings.py  utils.py
src/unibot/answering/: _openrouter_utils.py  citation_validation.py  grounding.py  model_adapter.py  openrouter_adapter.py  prompting.py  service.py
src/unibot/api/: app.py  dependencies.py  pipeline_factory.py  serialization.py
src/unibot/cli/: __init__.py  __main__.py  commands.py  display.py  interactive.py
src/unibot/crawl/: __init__.py  async_runner.py  crawl4ai_fetcher.py  fetchers.py  jobs.py  snapshot_store.py  source_identity.py  wp_api_fetcher.py
src/unibot/db/: models.py  session.py
src/unibot/domain/: record_payloads.py  record_renderers.py  source_authority.py  source_policies.py  types.py
src/unibot/enrich/: apply.py  faculty_school_map.py
(+67 files in other folders)
